--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be writt -->
-	<marquee control>Welcome to Accio Jobs!</marquee>
+	<h1><marquee control>Welcome to Accio Jobs!</marquee></h1>
 
     <h1><a href="https://acciojob.com/blog/">Blog</a></h1>
 
