--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be writt -->
-	<marquee control><h1>Welcome to Accio Jobs!</h1>h1></marquee>
+	<marquee control><h1>Welcome to Accio Jobs!</h1></marquee>
 
     <h1><a href="https://acciojob.com/blog/">Blog</a></h1>
 
